syntax = "proto3";

package goclaw.v1;

option go_package = "github.com/goclaw/goclaw/pkg/grpc/pb/v1;pbv1";

import "goclaw/v1/common.proto";
import "google/protobuf/timestamp.proto";

// AdminService provides engine administration operations
service AdminService {
  rpc GetEngineStatus(GetEngineStatusRequest) returns (GetEngineStatusResponse);
  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);
  rpc ManageCluster(ManageClusterRequest) returns (ManageClusterResponse);
  rpc PauseWorkflows(PauseWorkflowsRequest) returns (PauseWorkflowsResponse);
  rpc ResumeWorkflows(ResumeWorkflowsRequest) returns (ResumeWorkflowsResponse);
  rpc PurgeWorkflows(PurgeWorkflowsRequest) returns (PurgeWorkflowsResponse);
  rpc GetLaneStats(GetLaneStatsRequest) returns (GetLaneStatsResponse);
  rpc ExportMetrics(ExportMetricsRequest) returns (ExportMetricsResponse);
  rpc GetDebugInfo(GetDebugInfoRequest) returns (GetDebugInfoResponse);
}

// Engine state enum
enum EngineState {
  ENGINE_STATE_UNSPECIFIED = 0;
  ENGINE_STATE_IDLE = 1;
  ENGINE_STATE_RUNNING = 2;
  ENGINE_STATE_STOPPED = 3;
  ENGINE_STATE_ERROR = 4;
}

// Get engine status request
message GetEngineStatusRequest {}

// Engine metrics
message EngineMetrics {
  int64 active_workflows = 1;
  int64 completed_workflows = 2;
  int64 running_tasks = 3;
  int64 queue_depth = 4;
  int64 memory_usage_bytes = 5;
  int32 goroutine_count = 6;
  double cpu_usage_percent = 7;
}

// Get engine status response
message GetEngineStatusResponse {
  EngineState state = 1;
  EngineMetrics metrics = 2;
  google.protobuf.Timestamp uptime_since = 3;
  string last_error = 4;
  bool healthy = 5;
  Error error = 6;
}

// Update config request
message UpdateConfigRequest {
  map<string, string> config_updates = 1;
  bool persist = 2;
  bool dry_run = 3;
}

// Update config response
message UpdateConfigResponse {
  bool success = 1;
  map<string, string> applied_changes = 2;
  Error error = 3;
}

// Cluster operation enum
enum ClusterOperation {
  CLUSTER_OPERATION_UNSPECIFIED = 0;
  CLUSTER_OPERATION_LIST = 1;
  CLUSTER_OPERATION_ADD = 2;
  CLUSTER_OPERATION_REMOVE = 3;
  CLUSTER_OPERATION_PROMOTE = 4;
}

// Cluster node info
message ClusterNode {
  string node_id = 1;
  string address = 2;
  string role = 3;
  bool healthy = 4;
  google.protobuf.Timestamp joined_at = 5;
}

// Manage cluster request
message ManageClusterRequest {
  ClusterOperation operation = 1;
  string node_id = 2;
  string node_address = 3;
  bool confirmation = 4;
}

// Manage cluster response
message ManageClusterResponse {
  bool success = 1;
  repeated ClusterNode nodes = 2;
  Error error = 3;
}

// Pause workflows request
message PauseWorkflowsRequest {
  bool confirmation = 1;
}

// Pause workflows response
message PauseWorkflowsResponse {
  bool success = 1;
  int32 paused_count = 2;
  Error error = 3;
}

// Resume workflows request
message ResumeWorkflowsRequest {}

// Resume workflows response
message ResumeWorkflowsResponse {
  bool success = 1;
  int32 resumed_count = 2;
  Error error = 3;
}

// Purge workflows request
message PurgeWorkflowsRequest {
  int32 age_threshold_hours = 1;
  bool confirmation = 2;
  bool dry_run = 3;
}

// Purge workflows response
message PurgeWorkflowsResponse {
  bool success = 1;
  int32 purged_count = 2;
  Error error = 3;
}

// Get lane stats request
message GetLaneStatsRequest {
  string lane_name = 1;
}

// Lane statistics
message LaneStats {
  string lane_name = 1;
  int32 queue_depth = 2;
  int32 worker_count = 3;
  double throughput_per_sec = 4;
  double error_rate = 5;
}

// Get lane stats response
message GetLaneStatsResponse {
  repeated LaneStats lanes = 1;
  Error error = 2;
}

// Metrics format enum
enum MetricsFormat {
  METRICS_FORMAT_UNSPECIFIED = 0;
  METRICS_FORMAT_PROMETHEUS = 1;
  METRICS_FORMAT_JSON = 2;
}

// Export metrics request
message ExportMetricsRequest {
  MetricsFormat format = 1;
  string prefix_filter = 2;
}

// Export metrics response
message ExportMetricsResponse {
  string metrics_data = 1;
  Error error = 2;
}

// Debug info type enum
enum DebugInfoType {
  DEBUG_INFO_TYPE_UNSPECIFIED = 0;
  DEBUG_INFO_TYPE_GOROUTINE = 1;
  DEBUG_INFO_TYPE_HEAP = 2;
  DEBUG_INFO_TYPE_CPU = 3;
}

// Get debug info request
message GetDebugInfoRequest {
  DebugInfoType type = 1;
  int32 duration_seconds = 2;
}

// Get debug info response
message GetDebugInfoResponse {
  bytes debug_data = 1;
  Error error = 2;
}

