syntax = "proto3";

package goclaw.v1;

option go_package = "github.com/yourusername/goclaw/pkg/grpc/pb/v1;pbv1";

import "google/protobuf/timestamp.proto";

// Pagination request parameters
message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Pagination response metadata
message PaginationResponse {
  string next_page_token = 1;
  int32 total_count = 2;
}

// Error details
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Timestamp wrapper for consistency
message Timestamp {
  google.protobuf.Timestamp value = 1;
}
